<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".FilterPageActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="7dp"
        android:text="Preferrence Selection"
        android:textColor="@color/black"
        android:textSize="34sp"
        
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="45dp"
        android:text="Gender"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/Man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/man"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cisman"
        app:layout_constraintEnd_toStartOf="@+id/Woman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/Tranwoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/trans_woman"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cisman" />

    <Button
        android:id="@+id/transman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="178dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/trans_man"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/endage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/Ciswoman"
        app:layout_constraintTop_toBottomOf="@+id/Nonbinary" />

    <Button
        android:id="@+id/Woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/woman"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Ciswoman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/Ciswoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/cis_woman"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Tranwoman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Woman" />

    <Button
        android:id="@+id/cisman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/cis_man"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Tranwoman"
        app:layout_constraintEnd_toStartOf="@+id/Ciswoman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Man" />

    <Button
        android:id="@+id/Nonbinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/buttoncolor"
        android:padding="10dp"
        android:text="@string/non_binary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/transman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Woman"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="55dp"
        android:text="Enter Age Range"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tranwoman" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fetch"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="102dp"
        android:backgroundTint="@color/black"
        android:text="Get Profiles"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/startAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="2dp"
        android:text="18"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/endage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/endage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="27dp"
        android:inputType="number"
        android:maxLength="2"
        android:text="75"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startAge"
        app:layout_constraintTop_toBottomOf="@+id/transman" />


</androidx.constraintlayout.widget.ConstraintLayout>